* fix bug [ 1856656 ] IllegalState exception (sgb)

* disable chat time menu in non networked games (sgb)

* add limited chat flood control (sgb)

* [ 1837246 ] deploy troops phase window behavior (sgb)

* fix bug [ 1855427 ] submerged subs prevent air units from moving (sgb)

* add japanese, british, russions rockets, australian, canadian, neutral puppet state marine and neutral cruiser unit images (zero pilot)

* use rocket images when a player has rocket tech advance (sgb)

Changes for 0.9.2

* fix bug where if your capital fell, and you captured another players capital, you could buy units (sgb)

* PBEM posting fixes and cleanup (tclayton)
*   don't proxy PBEMMessagePoster, remove serialization (was broken in multi-player)
*   fix EndTurnDelegate serialization
*   only show Turn Summary Posting widgets if posting is enabled

* fix bug [ 1825831 ] in multiplayer mode, all players can edit (tclayton)

* fix bug [ 1825841 ] comment mode split bar visible (tclayton)

* WeakAi improvements (masch)
*   fix in land route calculation (does not take neutrals into account)
*   improvement in Non-combat move. Moves towards enemy territories even if there are no units.
*   purchase 20% transports if player is amphibious. Can boost that - buy
*   only transports if landing point is heavy armed e.g. UK or Japan
*   Try to capture unprotected land in amphibious combat ( 1 transport on different route )
*   Ignore channel feature for sea routes, if endpoint is on channel territory ( otherwise you cannot attack that)

* patch [ 1827892 ] Fix NPE crash when loading PBEM game (rrowell)

* for installer with java, update embeded jre to 1.6 (sgb)

* fix bug [ 1823400 ] Filename typo causes Exception to be thrown (sgb)

* fix bug [ 1825576 ] Missing entry in four_if_by_sea.xml (sgb)

* fix bug [ 1767304 ] Great War v.1.5 sz67 to sz57 bug (sgb)

* fix bug [ 1563219 ] Possible to buy more units than can be placed (4th ed rules) (sgb)

* fix bug [ 1535135 ] loading save game bug (sgb)
